# dev-app

./: .gitignore  .npmrc  README.md  TODO.md  forge.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml  release_.yml
config/: app.json  aws.json  uniserverz.json
electron/: index.js  preload.js
electron/browser/: index.html
electron/browser/css/: global.css  icons.css
electron/browser/css/main/: cloudfront.css  database.css  index.css  menu.css  port-forward.css
electron/browser/js/: utils.js
electron/browser/js/main/: cloudflared.js  cloudfront.js  database.js  index.js  menu.js  port-forward.js
electron/window/: busy.js  index.js  window.js
electron/window/handler/: app.js  cloudflared.d.ts  cloudflared.js  cloudfront.d.ts  cloudfront.js  database.js  livebox.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: cloudflared.rs  mod.rs  uniserverz.rs
src-tauri/src/uniserverz/: info.rs  mod.rs  uni.rs
src/components/: Checkbox.vue  CloudflaredComp.vue  SpinnerLoader.vue  UniserverzComp.vue
src/modules/tauri/: cloudflared.ts  uniserverz.ts
src/styles/: fonts.css  main.css
src/utils/: serviceStates.ts
