[package]
    name = "dev-app"
    version = "0.5.3"
    description = "Dev App"
    authors = [
        "Darco2903"
    ]
    license = ""
    repository = ""
    edition = "2021"
    rust-version = "1.78"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    name = "app_lib"
    crate-type = [
        "staticlib",
        "cdylib",
        "rlib"
    ]

[build-dependencies]
    tauri-build = {version = "2.0.0", features = [] }

[dependencies]
    serde_json = "1.0"
    serde = {version = "1.0", features = ["derive"] }
    log = "0.4"
    tauri = {version = "2.0.0", features = ["tray-icon"] }
    tauri-plugin-log = "2.0.0-rc"
    tokio = "1.46.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
    tauri-plugin-single-instance = "2"
    tauri-plugin-window-state = "2"
